--- a/DemoProject/.settings/org.eclipse.core.resources.prefs
+++ b/DemoProject/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//model/Activity\ Diagram.ad=UTF-8
+encoding//model/Activity\ Diagram2.ad=UTF-8
 encoding//model/Structure\ Diagram.sd=UTF-8
 encoding//model/Structure\ Diagram.sl=UTF-8
 encoding/<project>=UTF-8
